--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "jsx": "react-jsx",
     /* Linting */
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     /* Added for JavaScript compatibility */
     "allowJs": true,
